--- a/index.html
+++ b/index.html
@@ -7,21 +7,48 @@
     <!-- Style -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
 
-    <title>Title</title>
+    <title>Shiro - White flower shop</title>
 </head>
 <body>
-  <!-- header -->
-  <header id="header">
-  </header>
-  <!-- //header -->
-  <!-- footer -->
-  <footer id="footer">
-  </footer>
-  <!-- //footer -->
-  <!-- JQuery -->
+    <!-- header -->
+    <header id="header">
+        <div class="inner">
+            <a href="#" id="header_logo">Shiro</a>
+            <div id="hang_menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav id="global_nav">
+                <ul>
+                    <li>Concept</li>
+                    <li>Work</li>
+                    <li>Florist</li>
+                    <li>Shop information</li>
+                    <li>Contact us</li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- //header -->
+    <!-- Top -->
+    <section id="top" class="top">
+        <div class="inner">
+            <div id="top_logo">
+                <h1>Shiro</h1>
+                <p>&#8210; White flower shop &#8210;</p>
+            </div>
+        </div>
+    </section>
+    <!-- //Top-->
+    <!-- footer -->
+    <footer id="footer">
+
+    </footer>
+    <!-- //footer -->
+    <!-- JQuery -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  
-  <!-- Script -->
-  
+
+    <!-- Script -->
 </body>
 </html>
