--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
 
@@ -41,6 +43,22 @@
         </div>
     </section>
     <!-- //Top-->
+    <!-- Concept -->
+    <section id="concept" class="concept">
+        <div class="inner">
+            <div class="content_title">
+                <h1>Concept</h1>
+                <hr>
+                <p>私たちShiroは、白いお花だけを取り扱うフラワーショップです。<br/>
+                    色とりどりの花束も素敵だけれど、洗練された「白」の美しさを感じてほしい。<br/>
+                    「白」に対する愛から生まれた静寂な時間が流れる店へ、ぜひお越しください。</p>
+            </div>
+            <img src="./img/concept.png" class="concept_img">
+            <div class="concept_under">
+            </div>
+        </div>
+    </section>
+    <!-- //Concept-->
     <!-- footer -->
     <footer id="footer">
 
