add florist section.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,36 @@
         </div>
     </section>
     <!-- //Work-->
+    <!-- Florist -->
+    <section id="florist" class="florist">
+        <div class="innner">
+            <div class="content_title">
+                <h1>Florist</h1>
+                <hr>
+                <p>Shiro専属のフローリストたちをご紹介。<br/>得意の分野であなたのオーダーを最大限に叶えます。</p>
+            </div>
+            <div class="florist_contents">
+                <div class="florist_content">
+                    <img src="./img/florist_shiyu.png">
+                    <h1>Shiyu</h1>
+                    <p>お花茶屋大学フラワーアレンジメント科を卒業後、さまざまな白い花を探すために世界を一周し、Shiroの創業者となる。</p>
+                </div>
+                <div class="florist_content">
+                    <img src="./img/florist_mao.png">
+                    <h1>Mao</h1>
+                    <p>花の魅力に惹かれ、空間デザインの世界からフローリストの道を歩む。主に結婚式やイベントで使用するお花のディレクション担当。</p>
+                </div>
+                <div class="florist_content">
+                    <img src="./img/florist_omichan.png">
+                    <h1>Omichan</h1>
+                    <p>フローリスト兼ガーデナーという特殊な経歴をもつ。豊富な知識と技術でお客様のオーダーを叶える。</p>
+                </div>
+            </div>
+            <div class="florist_top"></div>
+        </div>
+    </section>
+    <!-- //Florist-->
+
     <!-- footer -->
     <footer id="footer">
 
