add shop_info section.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,33 @@
         </div>
     </section>
     <!-- //Florist-->
+    <!-- Shop information -->
+    <section id="shop_info" class="shop_info">
+        <div class="inner">
+            <div class="content_title">
+                <h1>Shop information</h1>
+                <hr>
+                <p>Shiroの店舗情報をご紹介します。</p>
+            </div>
+            <div class="shop_info_contents">
+                <img src="./img/shop_information.png">
+                <dl>
+                    <dt>住所</dt>
+                    <dd>&#12306;810-0001<br/>福岡県福岡市中央区天神0-0-0</dd>
+
+                    <dt>電話番号</dt>
+                    <dd>0120-000-000</dd>
+
+                    <dt>営業時間</dt>
+                    <dd>11:00-20:30<br/>&#xFF08;定休日：水曜日&#xFF09;</dd>
+
+                    <dt>アクセス</dt>
+                    <dd>天神駅12a出口から徒歩6分<br/>東京駅8b出口から徒歩12分</dd>
+                </dl>
+            </div>
+        </div>
+    </section>
+    <!-- //Shop information-->
 
     <!-- footer -->
     <footer id="footer">
