add contact section.

--- a/index.html
+++ b/index.html
@@ -161,6 +161,18 @@
         </div>
     </section>
     <!-- //Shop information-->
+    <!-- Contact -->
+    <section id="contact" class="contact">
+        <div class="inner">
+            <div class="content_title">
+                <h1>Contact us</h1>
+                <hr>
+                <p>イベントや結婚式でご利用する装花のご相談や、<br/>フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
+            </div>
+            <a href="#" id="contact_btn"><span></span>お問い合わせ</a>
+        </div>
+    </section>
+    <!-- //Contact-->
 
     <!-- footer -->
     <footer id="footer">
