--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
 
     <!-- footer -->
     <footer id="footer">
+        <div class="inner">
+            <p>Copyright &copy; Shiro All Rights Reserved.</p>
+        </div>
 
     </footer>
     <!-- //footer -->
