rename nav_toggle and add script for fixed/open.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header id="header">
         <div class="inner">
             <a href="#" id="header_logo">Shiro</a>
-            <div id="hang_menu">
+            <div id="nav_toggle">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -186,5 +186,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
     <!-- Script -->
+    <script src="./js/header_nav_toggle.js" ></script>
 </body>
 </html>
