make div nav_toggle, add style and animation.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
         <div class="inner">
             <a href="#" id="header_logo">Shiro</a>
             <div id="nav_toggle">
-                <span></span>
-                <span></span>
-                <span></span>
+                <div>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
             </div>
             <nav id="global_nav">
                 <ul>
