add header_contents class, nav links, nav  scripts

--- a/index.html
+++ b/index.html
@@ -15,21 +15,23 @@
     <!-- header -->
     <header id="header">
         <div class="inner">
-            <a href="#" id="header_logo">Shiro</a>
-            <div id="nav_toggle">
-                <div>
-                    <span></span>
-                    <span></span>
-                    <span></span>
+            <div class="header_contents">
+                <a href="#" id="header_logo">Shiro</a>
+                <div id="nav_toggle">
+                    <div>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
                 </div>
             </div>
             <nav id="global_nav">
                 <ul>
-                    <li>Concept</li>
-                    <li>Work</li>
-                    <li>Florist</li>
-                    <li>Shop information</li>
-                    <li>Contact us</li>
+                    <li><a href="#concept">Concept</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#florist">Florist</a></li>
+                    <li><a href="#shop_info">Shop information</a></li>
+                    <li><a href="#contact">Contact us</a></li>
                 </ul>
             </nav>
         </div>
