--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
             <div class="content_title">
                 <h1>Work</h1>
                 <hr>
-                <p>オーダーメイドでのブーケ・アレンジメントのデザインのほか、<br/>ウェディングやイベントの装花なども行なっています。<br/>一人一人にあったご提案をさせていただきます。</p>
+                <p>オーダーメイドでのブーケ・アレンジメントのデザインのほか、<br/>
+                    ウェディングやイベントの装花なども行なっています。<br/>
+                    一人一人にあったご提案をさせていただきます。</p>
             </div>
             <div class="work_contents">
                 <div class="work_content">
@@ -110,7 +112,8 @@
             <div class="content_title">
                 <h1>Florist</h1>
                 <hr>
-                <p>Shiro専属のフローリストたちをご紹介。<br/>得意の分野であなたのオーダーを最大限に叶えます。</p>
+                <p>Shiro専属のフローリストたちをご紹介。<br/>
+                    得意の分野であなたのオーダーを最大限に叶えます。</p>
             </div>
             <div class="florist_contents">
                 <div class="florist_content">
@@ -166,7 +169,8 @@
             <div class="content_title">
                 <h1>Contact us</h1>
                 <hr>
-                <p>イベントや結婚式でご利用する装花のご相談や、<br/>フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
+                <p>イベントや結婚式でご利用する装花のご相談や、<br/>
+                    フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
             </div>
             <a href="#" id="contact_btn"><span></span>お問い合わせ</a>
         </div>
