fix work,florist contents width and nowrap.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <img src="./img/work_gift.png" id="work_gift">
                     <div class="work_content_dis">
                         <h1>Gift</h1>
-                        <p>花束をお送りしたいお相手、伝えたいお気持ちに合わせたプレゼント用花束のアレンジメントをさせていただきます。花言葉などの豆知識もお伝えします。</p>
+                        <p class="work_content_dis_p">花束をお送りしたいお相手、伝えたいお気持ちに合わせたプレゼント用花束のアレンジメントをさせていただきます。花言葉などの豆知識もお伝えします。</p>
                     </div>
                 </div>
                 <div class="work_content">
