add sooth scroll and fix height script.

--- a/index.html
+++ b/index.html
@@ -190,5 +190,6 @@
 
     <!-- Script -->
     <script src="./js/header_nav_toggle.js" ></script>
+    <script src="./js/smooth_scroll_fix_height.js" ></script>
 </body>
 </html>
