add br_pc class, fix content_title style.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <div class="content_title">
                 <h1>Concept</h1>
                 <hr>
-                <p>私たちShiroは、白いお花だけを取り扱うフラワーショップです。<br/>
-                    色とりどりの花束も素敵だけれど、洗練された「白」の美しさを感じてほしい。<br/>
+                <p>私たちShiroは、白いお花だけを取り扱うフラワーショップです。<br class="br_pc">
+                    色とりどりの花束も素敵だけれど、洗練された「白」の美しさを感じてほしい。<br class="br_pc">
                     「白」に対する愛から生まれた静寂な時間が流れる店へ、ぜひお越しください。</p>
             </div>
             <img src="./img/concept.png" class="concept_img">
@@ -69,8 +69,8 @@
             <div class="content_title">
                 <h1>Work</h1>
                 <hr>
-                <p>オーダーメイドでのブーケ・アレンジメントのデザインのほか、<br/>
-                    ウェディングやイベントの装花なども行なっています。<br/>
+                <p>オーダーメイドでのブーケ・アレンジメントのデザインのほか、<br class="br_pc">
+                    ウェディングやイベントの装花なども行なっています。<br class="br_pc">
                     一人一人にあったご提案をさせていただきます。</p>
             </div>
             <div class="work_contents">
@@ -112,7 +112,7 @@
             <div class="content_title">
                 <h1>Florist</h1>
                 <hr>
-                <p>Shiro専属のフローリストたちをご紹介。<br/>
+                <p>Shiro専属のフローリストたちをご紹介。<br class="br_pc">
                     得意の分野であなたのオーダーを最大限に叶えます。</p>
             </div>
             <div class="florist_contents">
@@ -169,7 +169,7 @@
             <div class="content_title">
                 <h1>Contact us</h1>
                 <hr>
-                <p>イベントや結婚式でご利用する装花のご相談や、<br/>
+                <p>イベントや結婚式でご利用する装花のご相談や、<br class="br_pc">
                     フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
             </div>
             <a href="#" id="contact_btn"><span></span>お問い合わせ</a>
