--- a/index.html
+++ b/index.html
@@ -1,196 +1,13 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="robots" content="noindex">
-    <!-- Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <!-- Style -->
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
-
-    <title>Shiro - White flower shop</title>
+    <title>shiro_web_coding のバージョン一覧</title>
 </head>
 <body>
-    <!-- header -->
-    <header id="header">
-        <div class="inner">
-            <div class="header_contents">
-                <a href="#" id="header_logo">Shiro</a>
-                <div id="nav_toggle">
-                    <div>
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                </div>
-            </div>
-            <nav id="global_nav">
-                <ul>
-                    <li><a href="#concept">Concept</a></li>
-                    <li><a href="#work">Work</a></li>
-                    <li><a href="#florist">Florist</a></li>
-                    <li><a href="#shop_info">Shop information</a></li>
-                    <li><a href="#contact">Contact us</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
-    <!-- //header -->
-    <!-- Top -->
-    <section id="top" class="top">
-        <div class="inner">
-            <div id="top_logo">
-                <h1>Shiro</h1>
-                <p>&#8210; White flower shop &#8210;</p>
-            </div>
-        </div>
-    </section>
-    <!-- //Top-->
-    <!-- Concept -->
-    <section id="concept" class="concept">
-        <div class="inner">
-            <div class="content_title">
-                <h1>Concept</h1>
-                <hr>
-                <p>私たちShiroは、白いお花だけを取り扱うフラワーショップです。<br class="br_pc">
-                    色とりどりの花束も素敵だけれど、洗練された「白」の美しさを感じてほしい。<br class="br_pc">
-                    「白」に対する愛から生まれた静寂な時間が流れる店へ、ぜひお越しください。</p>
-            </div>
-            <img src="./img/concept.png" class="concept_img">
-            <div class="concept_under">
-            </div>
-        </div>
-    </section>
-    <!-- //Concept-->
-    <!-- Work -->
-    <section id="work" class="work">
-        <div class="inner">
-            <div class="content_title">
-                <h1>Work</h1>
-                <hr>
-                <p>オーダーメイドでのブーケ・アレンジメントのデザインのほか、<br class="br_pc">
-                    ウェディングやイベントの装花なども行なっています。<br class="br_pc">
-                    一人一人にあったご提案をさせていただきます。</p>
-            </div>
-            <div class="work_contents">
-                <div class="work_content">
-                    <img src="./img/work_gift.png" id="work_gift">
-                    <div class="work_content_dis">
-                        <h1>Gift</h1>
-                        <p class="work_content_dis_p">花束をお送りしたいお相手、伝えたいお気持ちに合わせたプレゼント用花束のアレンジメントをさせていただきます。花言葉などの豆知識もお伝えします。</p>
-                    </div>
-                </div>
-                <div class="work_content">
-                    <img src="./img/work_decoretion.png" id="work_decoretion">
-                    <div class="work_content_dis">
-                        <h1>Decoration</h1>
-                        <p>お写真を彩るお花を一輪から販売。一定期間のご契約で定期的にご自宅へ配送させていただくことも可能です。</p>
-                    </div>
-                </div>
-                <div class="work_content">
-                    <img src="./img/work_wedding.png" id="work_wedding">
-                    <div class="work_content_dis">
-                        <h1>Wedding</h1>
-                        <p>ウエディングドレスに合わせたブーケや式場の雰囲気に合う装花をご提案。お打ち合わせの流れや回数、費用などにつきましてはお問い合わせください。</p>
-                    </div>
-                </div>
-                <div class="work_content">
-                    <img src="./img/work_for_yourself.png" id="work_for_yourself">
-                    <div class="work_content_dis">
-                        <h1>For yourself</h1>
-                        <p>お部屋の雰囲気やライフスタイルをお聞きしてご自宅用の花束をご提案し、少しでも長く咲かせるコツもお教えします。花束に合った花瓶をご提案することも可能です。</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- //Work-->
-    <!-- Florist -->
-    <section id="florist" class="florist">
-        <div class="innner">
-            <div class="content_title">
-                <h1>Florist</h1>
-                <hr>
-                <p>Shiro専属のフローリストたちをご紹介。<br class="br_pc">
-                    得意の分野であなたのオーダーを最大限に叶えます。</p>
-            </div>
-            <div class="florist_contents">
-                <div class="florist_content">
-                    <img src="./img/florist_shiyu.png">
-                    <h1>Shiyu</h1>
-                    <p>お花茶屋大学フラワーアレンジメント科を卒業後、さまざまな白い花を探すために世界を一周し、Shiroの創業者となる。</p>
-                </div>
-                <div class="florist_content">
-                    <img src="./img/florist_mao.png">
-                    <h1>Mao</h1>
-                    <p>花の魅力に惹かれ、空間デザインの世界からフローリストの道を歩む。主に結婚式やイベントで使用するお花のディレクション担当。</p>
-                </div>
-                <div class="florist_content">
-                    <img src="./img/florist_omichan.png">
-                    <h1>Omichan</h1>
-                    <p>フローリスト兼ガーデナーという特殊な経歴をもつ。豊富な知識と技術でお客様のオーダーを叶える。</p>
-                </div>
-            </div>
-            <div class="florist_top"></div>
-        </div>
-    </section>
-    <!-- //Florist-->
-    <!-- Shop information -->
-    <section id="shop_info" class="shop_info">
-        <div class="inner">
-            <div class="content_title">
-                <h1>Shop information</h1>
-                <hr>
-                <p>Shiroの店舗情報をご紹介します。</p>
-            </div>
-            <div class="shop_info_contents">
-                <img src="./img/shop_information.png">
-                <dl>
-                    <dt>住所</dt>
-                    <dd>&#12306;810-0001<br/>福岡県福岡市中央区天神0-0-0</dd>
-
-                    <dt>電話番号</dt>
-                    <dd>0120-000-000</dd>
-
-                    <dt>営業時間</dt>
-                    <dd>11:00-20:30<br/>&#xFF08;定休日：水曜日&#xFF09;</dd>
-
-                    <dt>アクセス</dt>
-                    <dd>天神駅12a出口から徒歩6分<br/>東京駅8b出口から徒歩12分</dd>
-                </dl>
-            </div>
-        </div>
-    </section>
-    <!-- //Shop information-->
-    <!-- Contact -->
-    <section id="contact" class="contact">
-        <div class="inner">
-            <div class="content_title">
-                <h1>Contact us</h1>
-                <hr>
-                <p>イベントや結婚式でご利用する装花のご相談や、<br class="br_pc">
-                    フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
-            </div>
-            <a href="#" id="contact_btn"><span></span>お問い合わせ</a>
-        </div>
-    </section>
-    <!-- //Contact-->
-
-    <!-- footer -->
-    <footer id="footer">
-        <div class="inner">
-            <p>Copyright &copy; Shiro All Rights Reserved.</p>
-        </div>
-
-    </footer>
-    <!-- //footer -->
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-    <!-- Script -->
-    <script src="./js/header_nav_toggle.js" ></script>
-    <script src="./js/smooth_scroll_fix_height.js" ></script>
+    <h1>shiro_web_codingのバージョン一覧</h1>
+    <ul>
+        <li><a href="v1.0/">Version 1.0</a></li>
+        <!-- <li><a href="v2.0/">Version 2.0</a></li> -->
+    </ul>
 </body>
 </html>
