--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1>shiro_web_codingのバージョン一覧</h1>
     <ul>
         <li><a href="v1.0/">Version 1.0</a></li>
-        <!-- <li><a href="v2.0/">Version 2.0</a></li> -->
+        <li><a href="v2.0/">Version 2.0</a></li>
     </ul>
 </body>
 </html>
