--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -162,5 +162,8 @@
         </div>
 
     </section>
+    <footer id="footer">
+        <p>Copyright &copy; Shiro All Rights Reserved.</p>
+    </footer>
 </body>
 </html>
