--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -13,7 +13,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- //Poppins -->
     <!-- Material Icon -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=mail" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+
     <!-- //Material Icon-->
     <!-- Adobe Fonts -->
     <script>
@@ -153,9 +155,7 @@
             <p>イベントや結婚式でご利用する装花のご相談や、<br>フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
             <div class="container">
                 <a href="#" alt="お問合せする" class="btn">
-                    <span class="material-symbols-outlined">
-                    mail
-                    </span>
+                    <i class="material-icons-outlined">mail</i>
                     お問合せ
                 </a>
             </div>
@@ -164,6 +164,9 @@
     </section>
     <footer id="footer">
         <p>Copyright &copy; Shiro All Rights Reserved.</p>
+        <a href="#" class="page_top_btn">
+            <i class="material-icons">arrow_drop_up</i>
+        </a>
     </footer>
 </body>
 </html>
