make it responsible without global navigation, and some animations.

--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -75,6 +75,7 @@
                     </div>
                     <div class="item">
                         <img src="./img/work_decoretion.png">
+                        <!-- To Do: make image for sp. -->
                         <div class="content">
                             <h2>Decoration</h2>
                             <p>お写真を彩るお花を一輪から販売。一定期間のご契約で定期的にご自宅へ配送させていただくことも可能です。</p>
@@ -82,6 +83,7 @@
                     </div>
                     <div class="item">
                         <img src="./img/work_wedding.png">
+                        <!-- To Do: make image for sp. -->
                         <div class="content">
                             <h2>Wedding</h2>
                             <p>ウエディングドレスに合わせたブーケや式場の雰囲気に合う装花をご提案。お打ち合わせの流れや回数、費用などにつきましてはお問い合わせください。</p>
@@ -107,21 +109,21 @@
                     <img src="./img/florist_shiyu.png">
                     <div class="content">
                         <h2>Shiyu</h2>
-                        <p>お花茶屋大学フラワーアレンジメント科を卒業後、さまざまな白い花を探すために世界を一周し、Shiroの創業者となる。</p>
+                        <p>お花茶屋大学フラワーアレンジメント科を卒業後、<br class="br_pc_tab">さまざまな白い花を探すために世界を一周し、Shiroの創業者となる。</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="./img/florist_mao.png">
                     <div class="content">
                         <h2>Mao</h2>
-                        <p>花の魅力に惹かれ、空間デザインの世界からフローリストの道を歩む。主に結婚式やイベントで使用するお花のディレクション担当。</p>
+                        <p>花の魅力に惹かれ、空間デザインの世界からフローリストの道を歩む。<br class="br_pc_tab">主に結婚式やイベントで使用するお花のディレクション担当。</p>
                     </div>
                 </div>
                 <div class="item">
                     <img src="./img/florist_omichan.png">
                     <div class="content">
                         <h2>Omichan</h2>
-                        <p>フローリスト兼ガーデナーという特殊な経歴をもつ。豊富な知識と技術でお客様のオーダーを叶える。</p>
+                        <p>フローリスト兼ガーデナーという特殊な経歴をもつ。<br class="br_pc_tab">豊富な知識と技術でお客様のオーダーを叶える。</p>
                     </div>
                 </div>
             </div>
@@ -133,6 +135,7 @@
             <p>Shiroの店舗情報をご紹介します。</p>
             <div class="container">
                 <img src="./img/shop_information.png">
+                <!-- To Do: make image for sp. -->
                 <dl>
                     <dt>住所</dt>
                     <dd>
@@ -152,7 +155,7 @@
     <section class="contact" id="contact">
         <div class="wrapper">
             <h1 class="section_title">Contact us</h1>
-            <p>イベントや結婚式でご利用する装花のご相談や、<br>フラワーアレンジメントのご予約などはこちらからお問い合わせください。</p>
+            <p>イベントや結婚式でご利用する装花のご相談や、<br>フラワーアレンジメントのご予約などは<br class="br_sp">こちらからお問い合わせください。</p>
             <div class="container">
                 <a href="#" alt="お問合せする" class="btn">
                     <i class="material-icons-outlined">mail</i>
