add animations using JQuery.

--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -171,5 +171,11 @@
             <i class="material-icons">arrow_drop_up</i>
         </a>
     </footer>
+
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Script -->
+    <script src="./js/main.js"></script>
 </body>
 </html>
