add global navigation with animation.

--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -40,7 +40,15 @@
                 <span></span>
                 <span></span>
             </div>
+            <ul id="nav">
+                <li><a href="#concept" alt="concept">Concept</a></li>
+                <li><a href="#work" alt="work">Work</a></li>
+                <li><a href="#florist" alt="florist">Florist</a></li>
+                <li><a href="#info" alt="shop information">Shop Information</a></li>
+                <li><a href="#contact" alt="contact">Contact Us</a></li>
+            </ul>
         </div>
+        
     </header>
     <section class="top" id="top">
         <div class="inner">
