add alt for all images.

--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -64,7 +64,7 @@
             <p>私たちShiroは、白いお花だけを取り扱うフラワーショップです。 <br>
                 色とりどりの花束も素敵だけれど、洗練された「白」の美しさを感じてほしい。<br>
                 「白」に対する愛から生まれた静寂な時間が流れる店へ、ぜひお越しください。</p>
-            <img src="./img/concept.png"></img>
+            <img src="./img/concept.png" alt="お店人気NO.1商品、白いマーガレットのブーケ。洗練された「白」の美しさを感じてください。"></img>
         </div>
     </section>
     <section class="work" id="work">
@@ -75,28 +75,28 @@
                 一人一人にあったご提案をさせていただきます。</p>
                 <div class="list clearfix">
                     <div class="item">
-                        <img src="./img/work_gift.png">
+                        <img src="./img/work_gift.png" alt="ギフト用花束の写真。">
                         <div class="content">
                             <h2>Gift</h2>
                             <p>花束をお送りしたいお相手、伝えたいお気持ちに合わせたプレゼント用花束のアレンジメントをさせていただきます。花言葉などの豆知識もお伝えします。花束をお送りしたいお相手、伝えたいお気持ちに合わせたプレゼント用花束のアレンジメントをさせていただきます。花言葉などの豆知識もお伝えします。</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="./img/work_decoretion.png">
+                        <img src="./img/work_decoretion.png" alt="パティスリーの商品モデル写真背景に当店のお花をご利用いただいた際の写真です。写真を彩るお花を販売させていただいています。">
                         <div class="content">
                             <h2>Decoration</h2>
                             <p>お写真を彩るお花を一輪から販売。一定期間のご契約で定期的にご自宅へ配送させていただくことも可能です。</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="./img/work_wedding.png">
+                        <img src="./img/work_wedding.png" alt="白いウェディングドレスと白いお花は相性がよく、お互いを引き立てます。">
                         <div class="content">
                             <h2>Wedding</h2>
                             <p>ウエディングドレスに合わせたブーケや式場の雰囲気に合う装花をご提案。お打ち合わせの流れや回数、費用などにつきましてはお問い合わせください。</p>
                         </div>
                     </div>
                     <div class="item">
-                        <img src="./img/work_for_yourself.png">
+                        <img src="./img/work_for_yourself.png" alt="インテリアにも、Shiroのお花を。自分へのご褒美にいかがですか。">
                         <div class="content">
                             <h2>For yourself</h2>
                             <p>お部屋の雰囲気やライフスタイルをお聞きしてご自宅用の花束をご提案し、少しでも長く咲かせるコツもお教えします。花束に合った花瓶をご提案することも可能です。</p>
@@ -112,21 +112,21 @@
                 得意の分野であなたのオーダーを最大限に叶えます。</p>
             <div class="list">
                 <div class="item">
-                    <img src="./img/florist_shiyu.png">
+                    <img src="./img/florist_shiyu.png" alt="Shiro創業者・Shiyu。">
                     <div class="content">
                         <h2>Shiyu</h2>
                         <p>お花茶屋大学フラワーアレンジメント科を卒業後、<br class="br_pc_tab">さまざまな白い花を探すために世界を一周し、Shiroの創業者となる。</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./img/florist_mao.png">
+                    <img src="./img/florist_mao.png" alt="主に結婚式やイベントのディレクションを担当するMao。">
                     <div class="content">
                         <h2>Mao</h2>
                         <p>花の魅力に惹かれ、空間デザインの世界からフローリストの道を歩む。<br class="br_pc_tab">主に結婚式やイベントで使用するお花のディレクション担当。</p>
                     </div>
                 </div>
                 <div class="item">
-                    <img src="./img/florist_omichan.png">
+                    <img src="./img/florist_omichan.png" alt="フローリスト兼ガーデナーのOmichan。">
                     <div class="content">
                         <h2>Omichan</h2>
                         <p>フローリスト兼ガーデナーという特殊な経歴をもつ。<br class="br_pc_tab">豊富な知識と技術でお客様のオーダーを叶える。</p>
@@ -140,7 +140,7 @@
             <h1 class="section_title">Shop Information</h1>
             <p>Shiroの店舗情報をご紹介します。</p>
             <div class="container">
-                <img src="./img/shop_information.png">
+                <img src="./img/shop_information.png" alt="Shiroの店舗情報。白い百合の花が目印。">
                 <dl>
                     <dt>住所</dt>
                     <dd>
