add alt to page top button.

--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -172,7 +172,7 @@
     </section>
     <footer id="footer">
         <p>Copyright &copy; Shiro All Rights Reserved.</p>
-        <a href="#" class="page_top_btn">
+        <a href="#" class="page_top_btn" alt="ページトップへ">
             <i class="material-icons">arrow_drop_up</i>
         </a>
     </footer>
