--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="noindex">
 
+    <!-- favicon -->
+    <link rel="icon" href="./favicon.svg" sizes="any" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="./apple-touch-icon.png"> <!-- 192x192px -->
+
     <!-- Google Fonts -->
     <!-- Poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
