--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="noindex">
 
+    <!-- OGP -->
+    <meta property="og:title" content="Shiro&nbsp;-White Flower Shop-&nbsp;">
+    <meta property="og:description" content="私たちShiroは、白いお花だけを取り扱うフラワーショップです。色とりどりの花束も素敵だけれど、洗練された「白」の美しさを感じてほしい。「白」に対する愛から生まれた静寂な時間が流れる店へ、ぜひお越しください。(以上のコンセプトで作成した架空のサイトです。)">
+    <meta property="og:image" content="https://fuchsia-84.github.io/shiro_web_coding/v2.0/img/ogp.jpg">
+    <meta property="og:url" content="https://fuchsia-84.github.io/shiro_web_coding/v2.0/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Shiro&nbsp;-White Flower Shop-&nbsp;">
+
     <!-- favicon -->
     <link rel="icon" href="./favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="apple-touch-icon" href="./apple-touch-icon.png"> <!-- 192x192px -->
@@ -34,6 +42,8 @@
       </script>
     <!-- //Adobe Fonts-->
     <link rel="stylesheet" href="css/main.css">
+
+    <title>Shiro&nbsp;-White Flower Shop-&nbsp;</title>
 </head>
 <body>
     <header id="header">
