add ogp for facebook and X.

--- a/v2.0/index.html
+++ b/v2.0/index.html
@@ -13,6 +13,12 @@
     <meta property="og:url" content="https://fuchsia-84.github.io/shiro_web_coding/v2.0/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Shiro&nbsp;-White Flower Shop-&nbsp;">
+    <!-- facebook -->
+    <meta property=”fb:app_id” content=”636320545494147”/>
+    <!-- X-->
+    <meta name=”twitter:card” content=”summary_large_image”/>
+    <meta name=”twitter:site” content=”@fuchsia_84”/>
+    
 
     <!-- favicon -->
     <link rel="icon" href="./favicon.svg" sizes="any" type="image/svg+xml">
